// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`memoryAdapter should get package by name 1`] = `
Object {
  "name": "@scope/package-name",
  "versions": Array [
    "1.2.3",
    "1.3.1",
    "3.2.1",
  ],
}
`;

exports[`memoryAdapter should list packages in the registry 1`] = `
Array [
  Object {
    "name": "@scope/package-name",
    "versions": Array [
      "1.2.3",
      "1.3.1",
      "3.2.1",
    ],
  },
  Object {
    "name": "other-package",
    "versions": Array [
      "1.2.3",
      "1.3.1",
      "3.2.1",
    ],
  },
]
`;
